--- a/digital-agency/index.html
+++ b/digital-agency/index.html
@@ -109,10 +109,10 @@
         <div class="company">
           <h5>company</h5>
           <ul>
-            <li><a href="#">about us</a></li>
+            <li><a href="#about">about us</a></li>
             <li><a href="#">careers</a></li>
             <li><a href="#">partners</a></li>
-            <li><a href="#">contact us</a></li>
+            <li><a href="#contact">contact us</a></li>
           </ul>
         </div>
         <div class="social-media">
